--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@lottiefiles/dotlottie-react": "^0.12.3",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@mui/material": "^6.4.0",
     "@nanostores/react": "ai/react",
     "ai": "^4.1.0",
     "clsx": "^2.1.1",
+    "lottie-react": "^2.4.1",
     "next": "15.1.4",
     "openai": "^4.79.1",
     "react": "^19.0.0",
