--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.1.4",
     "openai": "^4.79.1",
     "react": "^19.0.0",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
   },
