--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@formspree/react": "^2.5.1",
     "@lottiefiles/dotlottie-react": "^0.12.3",
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@mui/material": "^6.4.0",
@@ -23,6 +24,7 @@
     "react": "^19.0.0",
     "react-card-flip": "^1.2.3",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "uuid": "^11.0.5"
   },
