--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nanostores/react": "ai/react",
     "ai": "^4.1.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lottie-react": "^2.4.1",
     "next": "15.1.4",
     "openai": "^4.79.1",
