Add gemini modal ai chat

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@formspree/react": "^2.5.1",
+    "@google/generative-ai": "^0.24.0",
     "@lottiefiles/dotlottie-react": "^0.12.3",
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@mui/material": "^6.4.0",
