--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-markdown": "^10.1.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
